<resources>
    <string name="app_name">I-Cushion坐墊管理</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tag">NotSit</string>
    <string name="yes">確定</string>
    <string name="cancel">取消</string>
    <string name="scan">搜尋</string>
    <string name="connect">連線</string>
    <string name="disconnect">斷線</string>
    <string name="system_error">系統錯誤</string>
    <string name="notSupportBLE">不支援低耗藍牙</string>
    <string name="enableBLE">藍牙服務未開啟，需開啟才能繼續執行。</string>
    <string name="NotifyCushionStateDataKey">CushionState</string>
    <string name="OneTimeType">單次</string>
    <string name="add">新增</string>
    <string name="delete">刪除</string>
    <string name="ScanFrequency">掃描頻率</string>
    <string name="ClockSound">鬧鐘音效</string>
    <string name="CushionMac">坐墊MAC</string>
    <string name="DefaultSetting">還原設定</string>
    <string name="ResetData">清除資料</string>
    <string name="ScanModeLowFrequency">低頻率</string>
    <string name="ScanModeBalanced">平　衡</string>
    <string name="ScanModeLowLatency">低閒置</string>
    <string name="WorkTime">作用時間</string>
    <string name="Hour">時</string>
    <string name="Minute">分</string>
    <string name="Second">秒</string>
    <string name="AlarmReset">離開歸零</string>
    <string name="Repeat">重複</string>
    <string name="SureToResetSetting">確定要還原設定嗎？</string>
    <string name="SureToClearLog">確定要清除資料嗎？</string>
    <string name="Default">預設</string>
    <string name="EveryDayAvgSitTime">每日平均久坐時間(秒)</string>
    <string name="AvgSitTimeChart">星期平均久坐趨勢圖(秒)</string>
    <string name="Day30Count">最高統計榜</string>
    <string name="empty_string"/>
    <string name="Bluetooth">啟動藍芽</string>
    <string name="AlarmSetting">鬧鐘設定</string>
    <string name="CushionState">坐墊狀態</string>
    <string name="ConnectionSetting">連線設定</string>
    <string name="RecordCheck">紀錄檢查</string>
    <string name="TimeAnalysis">時間統計</string>
    <string name="WeekRecord">近期紀錄</string>
    <string name="CushionManagement">I-Cushion坐墊管理</string>
    <bool name="debug">true</bool>
</resources>
