<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".MainActivity">

    <item android:id="@+id/action_bluetooth"
          android:title="@string/Bluetooth"
          android:icon="@drawable/mainbutton_bluetooth"
          android:indeterminate="false"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_scan"
          android:title="@string/scan"
          android:icon="@drawable/mainbutton_search"
          android:indeterminate="false"
          android:orderInCategory="100"
          android:visible="false"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_connect"
          android:title="@string/connect"
          android:icon="@drawable/mainbutton_connect"
          android:indeterminate="false"
          android:orderInCategory="100"
          android:visible="false"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_disconnect"
          android:title="@string/disconnect"
          android:icon="@drawable/mainbutton_disconnect"
          android:indeterminate="false"
          android:orderInCategory="100"
          android:visible="false"
          app:showAsAction="ifRoom"/>

</menu>
