<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:paddingStart="25sp"
                android:paddingTop="25sp"
                android:paddingEnd="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/AlarmClockFirstLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:id="@+id/HourTextView"
                android:textSize="25sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Hour"/>

        <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:id="@+id/MinuteTextView"
                android:textSize="25sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Minute"/>

        <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:id="@+id/SecondTextView"
                android:textSize="25sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Second"/>

    </LinearLayout>

    <LinearLayout
            android:layout_below="@id/AlarmClockFirstLine"
            android:id="@+id/AlarmClockSecondLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <NumberPicker
                android:id="@+id/HourNumberPicker"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"/>

        <NumberPicker
                android:id="@+id/MinuteNumberPicker"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"/>


        <NumberPicker
                android:id="@+id/SecondNumberPicker"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_below="@id/AlarmClockSecondLine"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <CheckBox
                android:id="@+id/ClockRepeat"
                android:text="@string/Repeat"
                android:textColor="@color/Gray"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:checked="false"/>

        <CheckBox
                android:id="@+id/ClockReset"
                android:text="@string/AlarmReset"
                android:textColor="@color/Gray"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:checked="false"/>

    </LinearLayout>

</RelativeLayout>
