<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="60sp">

        <TextView
                android:layout_marginStart="10sp"
                android:text="@string/ScanFrequency"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="60sp"/>

        <Spinner
                android:layout_marginEnd="10sp"
                android:layout_alignParentEnd="true"
                android:id="@+id/spinner_label"
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:padding="8dp"
                android:dropDownWidth="88sp"
                android:gravity="end"
                style="@style/Material.Widget.Spinner"/>

    </RelativeLayout>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/Gray"/>

    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="60sp">

        <TextView
                android:layout_marginStart="10sp"
                android:text="@string/ClockSound"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="60sp"/>

        <TextView
                android:background="@drawable/rounded_view"
                android:layout_margin="10sp"
                android:id="@+id/ClockSoundPathEditText"
                android:gravity="bottom"
                android:textSize="20sp"
                android:minWidth="150sp"
                android:maxWidth="150sp"
                android:paddingStart="8sp"
                android:paddingEnd="8sp"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="60sp"/>

    </RelativeLayout>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/Gray"/>

    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="60sp">

        <TextView
                android:layout_marginStart="10sp"
                android:text="@string/CushionMac"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="60sp"/>

        <EditText
                android:background="@drawable/rounded_view"
                android:id="@+id/CushionMacEditText"
                android:gravity="center_vertical|end"
                android:paddingStart="8sp"
                android:paddingEnd="8sp"
                android:minWidth="150sp"
                android:layout_margin="10sp"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="60sp"/>

    </RelativeLayout>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/Gray"/>

    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="60sp">

        <TextView
                android:layout_marginStart="10sp"
                android:text="@string/DefaultSetting"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="60sp"/>

        <com.rey.material.widget.Switch
                android:id="@+id/DefaultSettingSwitch"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:gravity="center"
                android:checked="false"
                android:padding="16dp"/>

    </RelativeLayout>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/Gray"/>

    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="60sp">

        <TextView
                android:layout_marginStart="10sp"
                android:text="@string/ResetData"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="60sp"/>

        <com.rey.material.widget.Switch
                android:id="@+id/ResetDataSwitch"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:gravity="center"
                android:checked="false"
                android:padding="16dp"/>

    </RelativeLayout>

</LinearLayout>